concord_macros/tests/dsl/fail/fail_behavior_self_extends.rs
use concord_macros::api;

api! {
    client SelfBehaviorApi {
        base "https://example.com"

        behavior read extends read {
            retry off
        }
    }
}

fn main() {}
